--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -31,7 +31,8 @@
 					"source.fixAll": true,
 					"source.organizeImports": true
 				},
-				"editor.insertSpaces": false,
+				"editor.insertSpaces": true,
+				"editor.tabSize": 2,
 				"eslint.enable": true,
 				"eslint.format.enable": true,
 				"eslint.codeActionsOnSave.mode": "all",
