chore: removed eslint rule of max len

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,7 @@
         "sourceType": "module"
     },
     "rules": {
-        "import/no-extraneous-dependecies": "off"
+        "import/no-extraneous-dependecies": "off",
+        "max-len": "off"
     }
 }
