--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,7 +9,12 @@
         "sourceType": "module"
     },
     "rules": {
-        "import/no-extraneous-dependecies": "off",
+        "import/no-extraneous-dependencies": ["error", {
+            "devDependencies": false,
+            "optionalDependencies": false,
+            "peerDependencies": false,
+            "packageDir": "./"
+        }],
         "max-len": "off"
     }
 }
